[project]
name = "aiguard-lab"
version = "0.1.0"
description = "AI Guard Lab - A tool for testing AI Guardrails"
authors = [
    { name = "Bruce McCorkendale", email = "bruce.mccorkendale@crowdstrike.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse ==1.4.0",
    "dotenv ==0.9.9",
    "pip-system-certs ==5.3",
    "pydantic ==2.12.5",
    "requests ==2.32.5",
    "tzlocal ==5.3.1",
]

[dependency-groups]
dev = [
    "ruff ==0.15.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",   # isort
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
]
ignore = ["E501"]
flake8-type-checking.runtime-evaluated-base-classes = ["pydantic.BaseModel"]
